Again modified the code that determines the default route.
git-svn-id: https://hgisvn.nds.ruhr-uni-bochum.de/svn/nds/repos_misc/builder-tasks/SSL@1169 ab8e1c94-a3be-4edd-a078-c4f91af8f3fd